Z-index of OwnDetails container fixed

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  font-family: "Poppins";
+}
+
 body > iframe {
   display: none;
 }
